infra/kubernetes/cluster-01/apps/media/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr-svc
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
